# yt_transcript

./: README.md  main.py  pyproject.toml  test.txt
yt_transcript/: cli.py  transcript.py
