[tool.poetry]
name = "yt-transcript"
version = "0.2.0"
description = ""
authors = ["Pri"]
readme = "README.md"
packages = [{include = "yt_transcript"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
youtube-transcript-api = "^0.6.3"
click = "^8.1.7"
requests = "^2.32.3"

[tool.poetry.scripts]
ytt = "main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
